--- a/src/gridfe/www/lib/main.css
+++ b/src/gridfe/www/lib/main.css
@@ -11,3 +11,32 @@ body {
 	/* XXX: dynamically generate path */
 	background-image: url(/gridfe/img/background.png);
 }
+
+.desc {
+	text-align: right;
+	background-color: #FFFF66;
+}
+
+.data1 {
+	background-color: #FFFFFF;
+}
+
+.data2 {
+	background-color: #EEEEEE;
+}
+
+.hdr {
+	text-align: center;
+	background-color: #6699CC;
+	color: #FFFFFF;
+	font-weight: bold;
+	font-size: 24px;
+}
+
+.subhdr {
+	text-align: center;
+	background-color: #336699;
+	color: #FFFFFF;
+	font-weight: bold;
+	font-size: 24px;
+}
