--- a/src/gridfe/www/lib/main.css
+++ b/src/gridfe/www/lib/main.css
@@ -88,7 +88,7 @@ a:link, a:visited {
 	color: #336699;
 }
 
-input {
+input, textarea, select {
 	background-color: #ddeeff;
 	border: 1px solid black;
 	padding: 1px;
