--- a/src/gridfe/www/lib/main.css
+++ b/src/gridfe/www/lib/main.css
@@ -16,6 +16,7 @@ body {
 .desc {
 	text-align: right;
 	background-color: #6699CC;
+	background-image: url(/gridfe/img/deskback.png);
 	border: 1px solid black;
 	border-top: 0px;
 	white-space: nowrap;
