--- a/src/gridfe/www/lib/main.css
+++ b/src/gridfe/www/lib/main.css
@@ -11,6 +11,7 @@ body {
 	background-color: #336699;
 	/* XXX: dynamically generate path */
 	/* background-image: url(/gridfe/img/background.png); */
+	background-image: url(/gridfe/img/back.png);
 }
 
 .desc {
@@ -62,6 +63,11 @@ td.hdr, td.subhdr {
 	padding: 3px;
 }
 
+h3 {
+	color: #336699;
+	border-bottom: 1px solid #003366;
+}
+
 td.hdr + td.hdr, td.subhdr + td.subhdr {
 	border-left: 0px;
 }
@@ -105,6 +111,8 @@ input, textarea, select {
 	border: 1px solid black;
 	font-weight: bold;
 	cursor: hand;
+	padding-left: 8px;
+	padding-right: 8px;
 }
 
 .err {
