specify fonts in inputs

--- a/src/gridfe/www/lib/main.css
+++ b/src/gridfe/www/lib/main.css
@@ -98,6 +98,10 @@ a:link, a:visited {
 	color: #336699;
 }
 
+input, select {
+	font-family: Tahoma, sans-serif;
+}
+
 input, textarea, select {
 	background-color: #ddeeff;
 	border: 1px solid black;
