--- a/src/gridfe/www/lib/main.css
+++ b/src/gridfe/www/lib/main.css
@@ -28,6 +28,7 @@ body {
 	width: 20%;
 	vertical-align: top;
 	text-shadow: #333333 1px 1px 1px;
+	filter: shadow(color=#333333, direction=135);
 }
 
 .data1, .monodata1 {
@@ -65,6 +66,7 @@ td.hdr, td.subhdr {
 	border-right: 1px solid black;
 	border-bottom: 1px solid black;
 	padding: 3px;
+	filter: shadow(color=#333333, direction=135);
 }
 
 h3 {
@@ -154,6 +156,7 @@ input[type="checkbox"] {
 	vertical-align: middle;
 	margin-right: 5px;
 	margin-left: 0px;
+	border: 0px;
 }
 
 .button:hover, button:hover {
@@ -176,6 +179,7 @@ option + option {
 	padding-left: 8px;
 	padding-right: 8px;
 	text-shadow: #333333 1px 1px 1px;
+	filter: shadow(color=#333333, direction=135);
 }
 
 label, input[type="checkbox"] {
