make inputs non-bold; only apply margins to checkboxes with labels

--- a/src/gridfe/www/lib/main.css
+++ b/src/gridfe/www/lib/main.css
@@ -117,6 +117,7 @@ a[href^="mailto:"]:before {
 
 input, select {
 	font-family: Tahoma, sans-serif;
+	font-weight: normal;
 }
 
 input[type="text"], textarea {
@@ -152,7 +153,7 @@ input, textarea {
 	-moz-border-radius: 5px;
 }
 
-input[type="checkbox"] {
+label input[type="checkbox"] {
 	vertical-align: middle;
 	margin-right: 5px;
 	margin-left: 0px;
